--- a/lib/shop_web/templates/layout/root.html.heex
+++ b/lib/shop_web/templates/layout/root.html.heex
@@ -19,6 +19,8 @@
         
       </section>
     </header>
+    <div class="relative z-10 bg-[#F3F3F3] w-full h-full ">
     <%= @inner_content %>
+    </div>
   </body>
 </html>
