--- a/lib/shop_web/live/Dashboard/index.html.heex
+++ b/lib/shop_web/live/Dashboard/index.html.heex
@@ -1,3 +1,90 @@
-<div>
-<h1>TECTONA SHOP</h1>
+<div class="ml-4">
+   <h1>TECTONA SHOP</h1>
+   <section id="tv-section">
+      <h1>TVs</h1>
+      <div class="flex">
+        <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/smartTV1.jpg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/smartTV1.jpg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/smartTV1.jpg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/smartTV1.jpg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/smartTV1.jpg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+      </div>
+      
+   </section>
+   <section id="food-section">
+      <h1>Foods</h1>
+   </section>
+   <section id="clothes-section">
+      <h1>CLOTHES</h1>
+   </section>
 </div>
