--- a/lib/shop_web/live/Dashboard/index.html.heex
+++ b/lib/shop_web/live/Dashboard/index.html.heex
@@ -83,8 +83,162 @@
    </section>
    <section id="food-section">
       <h1>Foods</h1>
+       <div class="flex">
+        <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/rice.jpeg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/rice.jpeg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/rice.jpeg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/rice.jpeg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/rice.jpeg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+      </div>
    </section>
    <section id="clothes-section">
       <h1>CLOTHES</h1>
+       <div class="flex">
+        <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/cloth1.webp")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/cloth1.webp")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/cloth1.webp")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/cloth1.webp")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+         <div class="">
+            <div class="rounded  hover:shadow-lg bg-white  ">
+               <div class=" mb-2 ">
+                  <img src={Routes.static_path(@socket, "/images/dashboard/cloth1.webp")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+               </div>
+               <div class="px-2  ">
+                  <div class="font-sans text-xs text-gray-900 truncate ">
+                     Vitron 32 inch Smart TV
+                  </div>
+               </div>
+               <div class="px-2 ">
+                  <span class=" text-xs  text-gray-500 mr-2 mb-2">sh25,000</span>
+               </div>
+            </div>
+         </div>
+      </div>
    </section>
 </div>
