--- a/lib/shop_web/live/Dashboard/index.html.heex
+++ b/lib/shop_web/live/Dashboard/index.html.heex
@@ -5,27 +5,63 @@
       <%= for product <- @products do %>
       <!--Card -->
       <div class="">
-         <div class="rounded  hover:shadow-lg bg-white  ">
+         <div class="rounded  hover:shadow-lg bg-white h-60  ">
             <%= if product.has_image? do %>
-            <div class=" mb-2 ">
-               <img src={Routes.static_path(@socket, "/images/dashboard/#{product.name}.jpg")} class="px-2 h-48 w-48" alt="Phoenix Framework Logo"/>
+            <div class="">
+               <img src={Routes.static_path(@socket, "/images/dashboard/#{product.name}.jpg")} class="px-2 h-36 w-48" alt="Phoenix Framework Logo"/>
             </div>
             <% else %>
-            <%=img_tag "/images/dashboard/placeholder.svg"%>
+            <%=img_tag "/images/dashboard/placeholder.svg", class: "px-2 h-36 w-48"%>
             <% end %>
             <div class="px-2  ">
                <div class="font-sans text-xs text-gray-900 truncate ">
                   <%= product.name %>
                </div>
             </div>
-            <div class="px-2 ">
-               <span class=" text-xs  text-gray-500 mr-2 mb-2"><%= product.price%></span>
+            <div class="px-2   ">
+               <span class=" text-xs  text-gray-500 ml-4 mr-2 mb-2 "><%= product.price%></span>
+            </div>
+            <div class="ml-12">
+               <button><%= link "Add", to: "#", phx_click: "add", class: "btn btn-primary flex-shrink-0 md:ml-4 bg-orange-400 py-2 px-2 md:px-4 text-white rounded-md", phx_value_id: product.id %></button>
+
             </div>
          </div>
       </div>
       <% end %>
    </div>
-  <div class="w-1/12 bg-orange-400">a</div>
+  <div class=" bg-[#F3F3F3] rounded-2xl ">
+      <h1 class="font-bold md:text-xl">SELECTED PRODUCTS</h1>
+      <table class="mt-4">
+         <thead>
+            <tr class="md:text-2xl ">
+               <th>Product</th>
+               <th class="md:pl-24">Price</th>
+            </tr>
+         </thead>
+         <tbody id="selected_products">
+            <%= for product <- @selected_items do %>
+            <tr class="even:bg-amber-100 odd:bg-blue-100 text-2xl ">
+               <td><%= product.name %></td>
+               <td class="md:pl-24"><%= product.price %></td>
+            </tr>
+            <% end %>
+         </tbody>
+      </table>
+
+      <div class="border-b  border-gray-700"></div>
+      <div class= "ml-48">
+         sh <%= @price %>
+         </div>
+
+      <div class="flex mt-4 space-x-8">
+      <div>
+      <button><%= link "CHECKOUT", to: "#", phx_click: "checkout", class: "btn btn-primary flex-shrink-0 md:ml-12 bg-[#555C71] py-2 px-4 text-white rounded-md" %></button>
+      </div>
+
+     
+      </div>
+
+   </div>
 
    </div>
 
