--- a/lib/shop_web/live/Dashboard/form_component.html.heex
+++ b/lib/shop_web/live/Dashboard/form_component.html.heex
@@ -6,6 +6,7 @@
          for={@changeset}
          id="product-form"
          phx-target={@myself}
+         phx-change="validate"
          phx-submit="save">
          <div class=" px-4 py-5  border-b border-gray-200">
             <h3 class="md:text-xl leading-6 font-bold text-gray-900">
@@ -27,7 +28,7 @@
                Price
                </label>
                <div class="mt-1 flex flex-col">
-                  <%= text_input f, :price, class: "user_dialog_input rounded-md sm:w-1/4 md:w-full truncate" %>
+                  <%= number_input f, :price, class: "user_dialog_input rounded-md sm:w-1/4 md:w-full truncate" %>
                </div>
                <%= error_tag f, :price %>
             </div>
