--- a/lib/shop_web/live/Dashboard/index.html.heex
+++ b/lib/shop_web/live/Dashboard/index.html.heex
@@ -9,17 +9,17 @@ return_to={Routes.dashboard_index_path(@socket, :index)}
 />
 </.modal>
 <% else %>
-<div class="ml-4">
-   <div class="flex justify-between bg-red-500">
+<div class="ml-4 py-4 mb-4">
+   <div class="flex justify-between">
       <div>
          <h1>TECTONA SHOP</h1>
       </div>
       <div>
-         <%= link "Attendance +", to: Routes.dashboard_index_path(@socket, :new), class: "bg-blue-500 px-5 py-3 rounded-md text-white font-medium " %>
+         <%= link "PRODUCT +", to: Routes.dashboard_index_path(@socket, :new), class: "bg-blue-500 px-5 py-3 rounded-md text-white font-medium " %>
       </div>
    </div>
-   <div class="flex w-11/12">
-      <div class="px-2 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-5 gap-5 ">
+   <div class="flex sm:flex-col md:flex-row  mt-4">
+      <div class="px-2 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-5 ">
          <%= for product <- @products do %>
          <!--Card -->
          <div class="">
@@ -46,11 +46,11 @@ return_to={Routes.dashboard_index_path(@socket, :index)}
          </div>
          <% end %>
       </div>
-      <div class=" bg-[#F3F3F3] rounded-2xl ">
+      <div class="  border-2 border-red-700 rounded-2xl  ">
          <h1 class="font-bold md:text-xl">SELECTED PRODUCTS</h1>
          <table class="mt-4">
             <thead>
-               <tr class="md:text-2xl ">
+               <tr class="md:text-2xl  ">
                   <th>Product</th>
                   <th class="md:pl-24">Price</th>
                </tr>
@@ -65,12 +65,12 @@ return_to={Routes.dashboard_index_path(@socket, :index)}
             </tbody>
          </table>
          <div class="border-b  border-gray-700"></div>
-         <div class= "ml-48">
+         <div class= "ml-44">
             sh <%= @price %>
          </div>
          <div class="flex mt-4 space-x-8">
             <div>
-               <button><%= link "CHECKOUT", to: "#", phx_click: "checkout", class: "btn btn-primary flex-shrink-0 md:ml-12 bg-[#555C71] py-2 px-4 text-white rounded-md" %></button>
+               <button><%= link "CHECKOUT", to: "#", class: "btn btn-primary flex-shrink-0 md:ml-12 bg-[#555C71] py-2 px-4 text-white rounded-md" %></button>
             </div>
          </div>
       </div>
