--- a/lib/shop_web/live/Dashboard/index.html.heex
+++ b/lib/shop_web/live/Dashboard/index.html.heex
@@ -12,7 +12,7 @@ return_to={Routes.dashboard_index_path(@socket, :index)}
 <div class="ml-4 py-4 mb-4">
    <div class="flex justify-between">
       <div>
-         <h1>TECTONA SHOP</h1>
+         <h1>Products</h1>
       </div>
       <div>
          <%= link "PRODUCT +", to: Routes.dashboard_index_path(@socket, :new), class: "bg-blue-500 px-5 py-3 rounded-md text-white font-medium " %>
