--- a/lib/shop_web/templates/layout/root.html.heex
+++ b/lib/shop_web/templates/layout/root.html.heex
@@ -12,8 +12,8 @@
   <body>
     <header>
       <section class="container">
-        <nav>
-         <h1>TECTONA SHOP</h1>
+        <nav class="py-2">
+         <h1>TECTONA  ONLINE SHOP</h1>
 
         </nav>
         
