--- a/lib/shop_web/live/Dashboard/index.html.heex
+++ b/lib/shop_web/live/Dashboard/index.html.heex
@@ -15,7 +15,7 @@ return_to={Routes.dashboard_index_path(@socket, :index)}
          <h1>Products</h1>
       </div>
       <div>
-         <div class="flex">
+         <div class="flex space-x-4">
             <div>
                <p>For ADMINS to Add Product -> </p>
             </div>
