--- a/lib/shop_web/templates/layout/root.html.heex
+++ b/lib/shop_web/templates/layout/root.html.heex
@@ -13,7 +13,7 @@
     <header>
       <section class="container">
         <nav class="py-2">
-         <h1>TECTONA  ONLINE SHOP</h1>
+         <h1>PETACH  ONLINE SHOP</h1>
 
         </nav>
         
